--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "postcss": "^8.3.0"
   },
   "dependencies": {
-    "browser-sync": "^2.26.14"
+    "browser-sync": "^2.26.14",
+    "jQuery": "^1.7.4"
   },
   "description": ""
 }
